fix cdz-cards spacing

--- a/assets/css/cdz_layout.css
+++ b/assets/css/cdz_layout.css
@@ -129,7 +129,7 @@
 
 .gh-feed.cdz-cards .gh-card,
 .gh-feed.cdz-cards .kg-card {
-  flex-basis: 49%;
+  flex-basis: 48.5%;
 }
 
 .gh-feed.cdz-cards .gh-card.cdz-card-xs,
